[2022-08-10 update 微软内推.md]

--- a/docs/soft/workplace/微软内推.md
+++ b/docs/soft/workplace/微软内推.md
@@ -4,24 +4,37 @@
 
 相比自己在Microsoft Careers网站上直接投递，内推的好处是：
 
-- 简历直达主管，简化简历筛选流程（高优筛选）
-- 可以在IM关注面试进展，及时反馈
+- 简历直达主管，简化简历筛选流程（**高优筛选**）
+- 可以在IM关注面试进展（**及时反馈**）
 
 #### 01. 内推流程&方式
 
 ##### 1.1 流程
 
-1轮电话面，4-5轮视频面
+简历通过后，1轮电话面，4-5轮视频面
 
 ##### 1.2 考察内容
 
-Todo
+考察内容可以分为硬软两个方面。
+
+硬的部分包括：
+
+- 做题能力，这个排在首位，因为**前三轮视频面基本是以考察做题为主**，题目做出来，剩下就好说......
+- 技术栈基础知识的掌握，主要还是要对计算机整个领域形成一套**框架**
+- 对于所做项目的熟悉程度，通常会围绕某个点展开，比如项目里用到etcd，可能就会引申到Raft共识算法......
+
+软的部分包括：
+
+- 沟通表达能力，尤其是老板面，基本都是比较抽象的问题，正常表现即可，**遵循STAR和金字塔原理**
+- 英语，这个不是必要的，其他方面表现良好即可
+
+重点还是围绕在**硬实力的提升**。
 
 ##### 1.3 方式
 
 简历，中文即可，命名：姓名\_城市\_意向岗位.pdf。邮件发送eric.wangpy@outlook.com。
 
-#### 02. 内推岗位（更新：2022.08.04）
+#### 02. 内推岗位（更新：2022.08.10）
 
 *备注：5年以下经验选择Software Engineer，以上可以关注Senior*
 
@@ -40,30 +53,28 @@ Todo
 | Job ID       | Title                                                        |
 | ------------ | ------------------------------------------------------------ |
 | 2022-1424104 | [Researcher (All Level)-System & Network group](https://careers.microsoft.com/us/en/search-results?keywords=1424104) |
-| 2022-1395704 | [Senior Engineering Manager - Dynamics 365 Global Experience](https://careers.microsoft.com/us/en/search-results?keywords=1395704) |
 
 ##### Suzhou
 
 | Job ID       | Title                                                        |
 | ------------ | ------------------------------------------------------------ |
+| 2022-1420404 | [Software Engineer 2/ Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1420404) |
+| 2022-1420402 | [Software Engineer 2/ Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1420402) |
 | 2022-1423594 | [Software Engineer II- M365 Griffin](https://careers.microsoft.com/us/en/search-results?keywords=1423594) |
 | 2022-1416602 | [Windows 365 Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1416602) |
 | 2022-1416596 | [Senior Software Engineer- M365 Engineering System](https://careers.microsoft.com/us/en/search-results?keywords=1416596) |
 | 2022-1409007 | [Senior Software Engineer- M365 Workload Management](https://careers.microsoft.com/us/en/search-results?keywords=1409007) |
+| 2022-1407827 | [Principal Data & Applied Scientist- M365 Data Scientist](https://careers.microsoft.com/us/en/search-results?keywords=1407827) |
 | 2022-1406917 | [Principal Software Engineering Manager- M365 IDEAs ML Team](https://careers.microsoft.com/us/en/search-results?keywords=1406917) |
-| 2022-1377532 | [Senior Software Engineer- M365 Griffin](https://careers.microsoft.com/us/en/search-results?keywords=1377532) |
 | 2022-1377531 | [Senior Software Engineer- M365 Griffin](https://careers.microsoft.com/us/en/search-results?keywords=1377531) |
-| 2022-1376309 | [Software Engineer - MTI](https://careers.microsoft.com/us/en/search-results?keywords=1376309) |
-| 2022-1363112 | [Principal/Senior Software Engineering Manager - Engineering Fundamentals](https://careers.microsoft.com/us/en/search-results?keywords=1363112) |
 | 2022-1362170 | [Senior Software Development Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1362170) |
 | 2022-1346605 | [Senior Software Engineer - M365 Microsoft Defender](https://careers.microsoft.com/us/en/search-results?keywords=1346605) |
 | 2022-1341871 | [Senior/ Principal Software ENG Manager- M365 Performance](https://careers.microsoft.com/us/en/search-results?keywords=1341871) |
-| 2022-1335350 | [Software Engineer II - M365 AzSC Diagnostic](https://careers.microsoft.com/us/en/search-results?keywords=1335350) |
-| 2022-1326122 | [Senior Software Engineer- M365 AzSC Diagnostic](https://careers.microsoft.com/us/en/search-results?keywords=1326122) |
 | 2022-1326119 | [Senior Software Engineer- M365 Griffin on Azure](https://careers.microsoft.com/us/en/search-results?keywords=1326119) |
 | 2022-1326282 | [Senior/Principal software engineering manager- M365 Big Data](https://careers.microsoft.com/us/en/search-results?keywords=1326282) |
-| 2022-1326181 | [Software Engineer ?--M365 Engineering System](https://careers.microsoft.com/us/en/search-results?keywords=1326181) |
-| 2022-1326109 | [Senior/ Principal Software Engineering Manager-M365 Search](https://careers.microsoft.com/us/en/search-results?keywords=1326109) |
+| 2022-1326181 | [Software Engineer ?-M365 Engineering System](https://careers.microsoft.com/us/en/search-results?keywords=1326181) |
+| 2022-1326123 | [Senior/ Principal Software Engineering Mgr - M365 Flighting](https://careers.microsoft.com/us/en/search-results?keywords=1326123) |
 | 2022-1318690 | [Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1318690) |
 | 2022-1251197 | [Senior/Principal Software Engineering Manager- M365 Connectivity](https://careers.microsoft.com/us/en/search-results?keywords=1251197) |
+| 2022-1279963 | [Senior Software Engineer - M365 Fleet AGC](https://careers.microsoft.com/us/en/search-results?keywords=1279963) |
 
