[2022-08-27] add 跟着孟岩学编程

--- a/docs/soft/workplace/微软内推.md
+++ b/docs/soft/workplace/微软内推.md
@@ -34,7 +34,7 @@
 
 简历，中文即可，命名：姓名\_城市\_意向岗位.pdf。邮件发送eric.wangpy@outlook.com。
 
-#### 02. 内推岗位（更新：2022.08.10）
+#### 02. 内推岗位（更新：2022.08.27）
 
 *备注：5年以下经验选择Software Engineer，以上可以关注Senior*
 
@@ -48,33 +48,47 @@
 | 2022-1376507 | [Principal Software Engineering Manager](https://careers.microsoft.com/us/en/search-results?keywords=1376507) |
 | 2022-1313947 | [Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1313947) |
 
+
 ##### Shanghai
 
 | Job ID       | Title                                                        |
 | ------------ | ------------------------------------------------------------ |
-| 2022-1424104 | [Researcher (All Level)-System & Network group](https://careers.microsoft.com/us/en/search-results?keywords=1424104) |
+| 2022-1446367 | [Senior Software Engineer- Dynamics 365 Globalization](https://careers.microsoft.com/us/en/search-results?keywords=1446367) |
 
 ##### Suzhou
 
 | Job ID       | Title                                                        |
 | ------------ | ------------------------------------------------------------ |
-| 2022-1420404 | [Software Engineer 2/ Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1420404) |
-| 2022-1420402 | [Software Engineer 2/ Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1420402) |
+| 2022-1445134 | [Software Engineer II - M365 Auth & Directory](https://careers.microsoft.com/us/en/search-results?keywords=1445134) |
+| 2022-1445133 | [Senior Software Development Engineer - M365 Auth & Directory](https://careers.microsoft.com/us/en/search-results?keywords=1445133) |
+| 2022-1443614 | [Software Engineer 2- M365 Griffin on Azure](https://careers.microsoft.com/us/en/search-results?keywords=1443614) |
+| 2022-1438894 | [Senior Software Engineer- M365 Performance Analysis/Profiling](https://careers.microsoft.com/us/en/search-results?keywords=1438894) |
+| 2022-1438892 | [Senior Software Engineer- M365 Latency](https://careers.microsoft.com/us/en/search-results?keywords=1438892) |
+| 2022-1438891 | [Software Engineer 2- M365 COGS Management](https://careers.microsoft.com/us/en/search-results?keywords=1438891) |
+| 2022-1438890 | [Senior Software Development Engineer- M365 COSMIC](https://careers.microsoft.com/us/en/search-results?keywords=1438890) |
+| 2022-1441211 | [Software Engineer 2/ Senior Windows 365 Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1441211) |
+| 2022-1441122 | [Principal/Sr. SW Engineering Manager--Win365](https://careers.microsoft.com/us/en/search-results?keywords=1441122) |
+| 2022-1440040 | [Windows 365 Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1440040) |
+| 2022-1438895 | [Senior Software Engineer- Fleet AGC](https://careers.microsoft.com/us/en/search-results?keywords=1438895) |
+| 2022-1438893 | [Windows 365 Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1438893) |
+| 2022-1438889 | [Principal Software Engineering Manager- M365 Flighting](https://careers.microsoft.com/us/en/search-results?keywords=1438889) |
+| 2022-1438888 | [Software Engineer 2/ Senior Software Engineer - M365 Enterprize cloud Teams landing](https://careers.microsoft.com/us/en/search-results?keywords=1438888) |
+| 2022-1438887 | [Principal Software Engineering Manager- M365 Big Data](https://careers.microsoft.com/us/en/search-results?keywords=1438887) |
+| 2022-1438801 | [Software Engineer 2/ Senior Software Engineer - M365 Big Data Optimization](https://careers.microsoft.com/us/en/search-results?keywords=1438801) |
+| 2022-1437879 | [Principal Software Engineering Manager - M365 Defender for Office](https://careers.microsoft.com/us/en/search-results?keywords=1437879) |
+| 2022-1437568 | [Windows 365 Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1437568) |
+| 2022-1437567 | [Principal/Sr. SW Engineering Manager--Win365](https://careers.microsoft.com/us/en/search-results?keywords=1437567) |
+| 2022-1437565 | [Sr/Principal SW Engineering Manager--Win365](https://careers.microsoft.com/us/en/search-results?keywords=1437565) |
+| 2022-1435347 | [Senior Software Engineer- M365](https://careers.microsoft.com/us/en/search-results?keywords=1435347) |
+| 2022-1420402 | [Software Engineer 2/ Senior Software Engineer - M365 Big Data Optimization](https://careers.microsoft.com/us/en/search-results?keywords=1420402) |
 | 2022-1423594 | [Software Engineer II- M365 Griffin](https://careers.microsoft.com/us/en/search-results?keywords=1423594) |
 | 2022-1416602 | [Windows 365 Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1416602) |
 | 2022-1416596 | [Senior Software Engineer- M365 Engineering System](https://careers.microsoft.com/us/en/search-results?keywords=1416596) |
 | 2022-1409007 | [Senior Software Engineer- M365 Workload Management](https://careers.microsoft.com/us/en/search-results?keywords=1409007) |
-| 2022-1407827 | [Principal Data & Applied Scientist- M365 Data Scientist](https://careers.microsoft.com/us/en/search-results?keywords=1407827) |
-| 2022-1406917 | [Principal Software Engineering Manager- M365 IDEAs ML Team](https://careers.microsoft.com/us/en/search-results?keywords=1406917) |
 | 2022-1377531 | [Senior Software Engineer- M365 Griffin](https://careers.microsoft.com/us/en/search-results?keywords=1377531) |
-| 2022-1362170 | [Senior Software Development Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1362170) |
 | 2022-1346605 | [Senior Software Engineer - M365 Microsoft Defender](https://careers.microsoft.com/us/en/search-results?keywords=1346605) |
 | 2022-1341871 | [Senior/ Principal Software ENG Manager- M365 Performance](https://careers.microsoft.com/us/en/search-results?keywords=1341871) |
 | 2022-1326119 | [Senior Software Engineer- M365 Griffin on Azure](https://careers.microsoft.com/us/en/search-results?keywords=1326119) |
-| 2022-1326282 | [Senior/Principal software engineering manager- M365 Big Data](https://careers.microsoft.com/us/en/search-results?keywords=1326282) |
 | 2022-1326181 | [Software Engineer ?-M365 Engineering System](https://careers.microsoft.com/us/en/search-results?keywords=1326181) |
-| 2022-1326123 | [Senior/ Principal Software Engineering Mgr - M365 Flighting](https://careers.microsoft.com/us/en/search-results?keywords=1326123) |
 | 2022-1318690 | [Senior Software Engineer](https://careers.microsoft.com/us/en/search-results?keywords=1318690) |
 | 2022-1251197 | [Senior/Principal Software Engineering Manager- M365 Connectivity](https://careers.microsoft.com/us/en/search-results?keywords=1251197) |
-| 2022-1279963 | [Senior Software Engineer - M365 Fleet AGC](https://careers.microsoft.com/us/en/search-results?keywords=1279963) |
-
