--- a/docs/soft/workplace/微软内推.md
+++ b/docs/soft/workplace/微软内推.md
@@ -34,40 +34,35 @@
 
 简历，中文即可，命名：姓名\_城市\_意向岗位.pdf。邮件发送eric.wangpy@outlook.com。
 
-#### 02. 内推岗位（更新：2022.10.21）
+#### 02. 内推岗位（更新：2022.12.09）
 
 *备注：5年以下经验选择Software Engineer，以上可以关注Senior*
 
 ##### Beijing
 
-| Job ID       | Title                                                        |
-| ------------ | ------------------------------------------------------------ |
-| 2022-1459717 | [Senior Software Development Engineer - Edge Consumer](https://careers.microsoft.com/us/en/search-results?keywords=1459717) |
-| 2022-1456452 | [Senior Software Engineer - M365 Data Insights](https://careers.microsoft.com/us/en/search-results?keywords=1456452) |
-
+None
 
 ##### Shanghai
 
-None
+| Job ID       | Title                                                        |
+| ------------ | ------------------------------------------------------------ |
+| 2022-1493764 | [Software Engineer II - Azure Open Source Database (MySQL)](https://careers.microsoft.com/us/en/search-results?keywords=1493764) |
+| 2022-1493763 | [Software Engineer II - Azure Open Source Database (MySQL)](https://careers.microsoft.com/us/en/search-results?keywords=1493763) |
+| 2022-1493762 | [Senior Software Engineer - Azure Open Source Database (MySQL)](https://careers.microsoft.com/us/en/search-results?keywords=1493762) |
 
 ##### Suzhou
 
 | Job ID       | Title                                                        |
 | ------------ | ------------------------------------------------------------ |
+| 2022-1493684 | [Principal Software ENG MGR- M365 Flighting](https://careers.microsoft.com/us/en/search-results?keywords=1493684) |
+| 2022-1485293 | [Senior/ Principal Product Manager- M365 Engineering System](https://careers.microsoft.com/us/en/search-results?keywords=1485293) |
+| 2022-1481993 | [Software Engineer II- M365 Big Data Optimization](https://careers.microsoft.com/us/en/search-results?keywords=1481993) |
+| 2022-1481992 | [Senior Software Engineer - M365 Big Data Optimization](https://careers.microsoft.com/us/en/search-results?keywords=1481992) |
+| 2022-1481648 | [Senior/ Principal Software ENG MGR- M365 Data Insights](https://careers.microsoft.com/us/en/search-results?keywords=1481648) |
+| 2022-1481646 | [Senior Software Engineer - M365 Data Insights](https://careers.microsoft.com/us/en/search-results?keywords=1481646) |
 | 2022-1471958 | [Senior Software Engineer- M365 Data Platform](https://careers.microsoft.com/us/en/search-results?keywords=1471958) |
 | 2022-1471957 | [Software Engineer 2- M365 Data Platform](https://careers.microsoft.com/us/en/search-results?keywords=1471957) |
-| 2022-1465492 | [Senior Software Engineer- M365 COSMIC](https://careers.microsoft.com/us/en/search-results?keywords=1465492) |
-| 2022-1465473 | [Software Engineer 2- M365 Data Insights](https://careers.microsoft.com/us/en/search-results?keywords=1465473) |
-| 2022-1461116 | [Senior Software Engineer - M365 Data Insights](https://careers.microsoft.com/us/en/search-results?keywords=1461116) |
-| 2022-1461115 | [Principal Software Engineering Manager- M365 Flighting](https://careers.microsoft.com/us/en/search-results?keywords=1461115) |
-| 2022-1461101 | [Senior Software Engineer- M365 Griffin on Azure](https://careers.microsoft.com/us/en/search-results?keywords=1461101) |
-| 2022-1461096 | [Software Engineer 2 - M365 Big Data Optimization](https://careers.microsoft.com/us/en/search-results?keywords=1461096) |
 | 2022-1461006 | [Senior/ Principal Software ENG Manager- M365 Performance](https://careers.microsoft.com/us/en/search-results?keywords=1461006) |
-| 2022-1443614 | [Software Engineer 2- M365 Griffin on Azure](https://careers.microsoft.com/us/en/search-results?keywords=1443614) |
-| 2022-1443613 | [Software Engineer 2-M365 SPoG](https://careers.microsoft.com/us/en/search-results?keywords=1443613) |
-| 2022-1438801 | [Senior Software Engineer - M365 Big Data Optimization](https://careers.microsoft.com/us/en/search-results?keywords=1438801) |
 | 2022-1437879 | [Principal Software Engineering Manager - M365 Defender for Office](https://careers.microsoft.com/us/en/search-results?keywords=1437879) |
-| 2022-1409007 | [Senior Software Engineer- M365 Workload Management](https://careers.microsoft.com/us/en/search-results?keywords=1409007) |
 | 2022-1407827 | [Principal Data & Applied Scientist- M365 Data Scientist](https://careers.microsoft.com/us/en/search-results?keywords=1407827) |
-| 2022-1377531 | [Senior Software Engineer- M365 Griffin](https://careers.microsoft.com/us/en/search-results?keywords=1377531) |
 | 2022-1346605 | [Senior Software Engineer - M365 Microsoft Defender](https://careers.microsoft.com/us/en/search-results?keywords=1346605) |
